--- a/app/src/main/res/layout/activity_tourism_attraction.xml
+++ b/app/src/main/res/layout/activity_tourism_attraction.xml
@@ -1,34 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        tools:ignore="MissingConstraints">
-        <android.support.v4.view.ViewPager
-            android:id="@+id/pager"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_alignParentTop="true" />
-        <me.relex.circleindicator.CircleIndicator
-            android:id="@+id/indicator"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:id="@+id/mainListView"
+        android:layout_margin="5dp"
+        >
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_alignParentBottom="true"/>
-    </RelativeLayout>
+            android:layout_height="200dp"
+            tools:ignore="MissingConstraints">
+            <android.support.v4.view.ViewPager
+                android:id="@+id/pager"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_alignParentTop="true" />
+            <me.relex.circleindicator.CircleIndicator
+                android:id="@+id/indicator"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_alignParentBottom="true"/>
+        </RelativeLayout>
 
-    <com.example.gardeshgari.HorizontalListView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:widget="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/HorizontalListView"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:divider="#fff"
-        widget:dividerWidth="0dp"
-        tools:ignore="MissingConstraints" />
-
-</LinearLayout>
+        <TableRow
+            android:id="@+id/hr"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#000"
+            android:layout_margin="10dp"/>
+    </LinearLayout>
+</ScrollView>
