--- a/app/src/main/res/layout/attraction.xml
+++ b/app/src/main/res/layout/attraction.xml
@@ -10,7 +10,7 @@
             android:layout_width="120dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:background="@drawable/black"
+            android:background="@drawable/border"
             android:padding="3dp">
 
             <ImageView
