--- a/app/src/main/res/layout/ostan_attraction.xml
+++ b/app/src/main/res/layout/ostan_attraction.xml
@@ -59,7 +59,7 @@
             android:id="@+id/locationIcon"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/location"
+            android:src="@drawable/address"
             tools:ignore="ContentDescription" />
 
     </LinearLayout>
