--- a/app/src/main/res/layout/fragment_souvenir.xml
+++ b/app/src/main/res/layout/fragment_souvenir.xml
@@ -1,17 +1,22 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.gardeshgari.souvenirFragment">
+    android:layout_height="match_parent">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/tv"
-        android:gravity="center"
-        android:background="#8cf11f"
-        android:textSize="25sp"
-        android:textColor="#fff"
-        android:text="1. One" />
+        android:orientation="vertical"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp">
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/listView"
+            android:scrollbars="none">
+
+        </ListView>
+
+    </LinearLayout>
 
 </FrameLayout>
