ایجاد اکتیویتی جاذبه‌ها و سوغات استان‌ها

--- a/app/src/main/res/layout/province_attraction.xml
+++ b/app/src/main/res/layout/province_attraction.xml
@@ -27,7 +27,18 @@
         android:src="@drawable/attraction_icon"
         tools:ignore="ContentDescription" />
 
-    <TextView
+        <TableRow
+            android:id="@+id/hr"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#000"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"/>
+
+
+        <TextView
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
