--- a/app/src/main/res/layout/activity_tourism_attraction.xml
+++ b/app/src/main/res/layout/activity_tourism_attraction.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".activities.TourismAttractionActivity">
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    tools:ignore="MissingConstraints">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,3 +44,4 @@
             android:layout_margin="10dp"/>
     </LinearLayout>
 </ScrollView>
+</android.support.constraint.ConstraintLayout>
