--- a/app/src/main/res/layout/activity_tourism_attraction.xml
+++ b/app/src/main/res/layout/activity_tourism_attraction.xml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.TourismAttractionActivity">
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".activities.TourismAttractionActivity"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:id="@+id/container_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
+
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar" />
+    </LinearLayout>
+
+    <ScrollView
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     tools:ignore="MissingConstraints">
@@ -44,4 +56,4 @@
             android:layout_margin="10dp"/>
     </LinearLayout>
 </ScrollView>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
