--- a/app/src/main/res/layout/attraction.xml
+++ b/app/src/main/res/layout/attraction.xml
@@ -5,9 +5,8 @@
     android:orientation="vertical"
     android:padding="3dp">
 
-
         <LinearLayout
-            android:layout_width="120dp"
+            android:layout_width="140dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:background="@drawable/border"
@@ -17,9 +16,20 @@
                 android:id="@+id/image"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1.8"
+                android:layout_weight="3"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_launcher_foreground" />
+
+            <TableRow
+                android:id="@+id/hr"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#000"
+                android:layout_marginRight="2dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"/>
+
             <TextView
                 android:id="@+id/text"
                 android:layout_width="match_parent"
