--- a/app/src/main/res/layout/province_souvenir.xml
+++ b/app/src/main/res/layout/province_souvenir.xml
@@ -37,15 +37,35 @@
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"/>
 
-        <TextView
-            android:id="@+id/name"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:textColor="#000"
-            android:textSize="24sp"
-            android:paddingRight="5dp"
-            android:paddingLeft="5dp"/>
+            android:orientation="horizontal"
+            android:gravity="center|top">
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/share"
+                android:id="@+id/share"
+                android:padding="10dp"/>
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/unsaved"
+                android:id="@+id/save"
+                android:padding="5dp"/>
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:textColor="#000"
+                android:textSize="28sp"
+                android:padding="5dp"/>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
