--- a/app/src/main/res/layout/activity_souvenir.xml
+++ b/app/src/main/res/layout/activity_souvenir.xml
@@ -1,30 +1,34 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:ignore="MissingConstraints"
-    android:divider="#000"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp">
+    android:id="@+id/mainListView">
+
+    <!--<LinearLayout-->
+    <!--android:id="@+id/container_toolbar"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:orientation="vertical">-->
+
+    <!--<include-->
+    <!--android:id="@+id/toolbar"-->
+    <!--layout="@layout/toolbar" />-->
+    <!--</LinearLayout>-->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@drawable/border"
         android:padding="5dp">
-
 
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/attraction_icon"
+            android:src="@drawable/souvenir_icon"
             tools:ignore="ContentDescription" />
 
         <TableRow
@@ -34,7 +38,7 @@
             android:background="#000"
             android:layout_marginRight="5dp"
             android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="5dp"/>
 
         <LinearLayout
@@ -67,7 +71,39 @@
                 android:padding="5dp"/>
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="right"
+            tools:ignore="RtlHardcoded"
+            android:padding="5dp">
 
+            <ScrollView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="none" >
+                <TextView
+                    android:id="@+id/description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:textColor="#000"
+                    android:textSize="16sp"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="10dp"
+                    />
+            </ScrollView>
+
+            <ImageView
+                android:id="@+id/descriptionIcon"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/description"
+                tools:ignore="ContentDescription" />
+
+        </LinearLayout>
     </LinearLayout>
+
 
 </LinearLayout>
