--- a/app/src/main/res/layout/activity_attraction.xml
+++ b/app/src/main/res/layout/activity_attraction.xml
@@ -26,7 +26,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="300dp"
             tools:ignore="MissingConstraints">
             <android.support.v4.view.ViewPager
                 android:id="@+id/pager"
@@ -76,7 +76,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:textColor="#000"
-                android:textSize="28sp"
+                android:textSize="@dimen/titleSize"
                 android:padding="5dp"/>
         </LinearLayout>
 
@@ -94,7 +94,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:textColor="#000"
-                android:textSize="20sp"
+                android:textSize="@dimen/subtitleSize"
                 android:paddingLeft="20dp"
                 android:paddingRight="10dp"
                 />
@@ -126,7 +126,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:textColor="#000"
-                android:textSize="16sp"
+                android:textSize="@dimen/textSize"
                 android:paddingLeft="20dp"
                 android:paddingRight="10dp"
                 />
