--- a/app/src/main/res/layout/attraction_list_view.xml
+++ b/app/src/main/res/layout/attraction_list_view.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:background="#fff"
     android:paddingTop="5dp"
-    android:paddingBottom="5dp">
+    android:paddingBottom="10dp">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -25,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#000"
-            android:textSize="24sp"
+            android:textSize="@dimen/titleSize"
             android:paddingRight="5dp"
             android:paddingLeft="5dp"
             android:text="جنگل‌های سرسبز شمال"/>
@@ -43,7 +43,7 @@
         xmlns:widget="http://schemas.android.com/apk/res-auto"
         android:id="@+id/HorizontalListView"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="220dp"
         android:divider="#000"
         widget:dividerWidth="0dp"
         tools:ignore="MissingConstraints" />
