--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,6 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="titleSize">28sp</dimen>
+    <dimen name="subtitleSize">22sp</dimen>
+    <dimen name="textSize">18sp</dimen>
 </resources>
