--- a/app/src/main/res/layout/activity_souvenir.xml
+++ b/app/src/main/res/layout/activity_souvenir.xml
@@ -67,7 +67,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:textColor="#000"
-                android:textSize="28sp"
+                android:textSize="@dimen/titleSize"
                 android:padding="5dp"/>
         </LinearLayout>
 
@@ -89,7 +89,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:textColor="#000"
-                    android:textSize="16sp"
+                    android:textSize="@dimen/subtitleSize"
                     android:paddingLeft="20dp"
                     android:paddingRight="10dp"
                     />
