--- a/app/src/main/res/layout/attraction.xml
+++ b/app/src/main/res/layout/attraction.xml
@@ -39,7 +39,9 @@
                 android:maxWidth="100dp"
                 android:layout_gravity="center_vertical"
                 android:textColor="#000"
-                android:textSize="16sp" />
+                android:textSize="@dimen/textSize"
+                android:paddingRight="5dp"
+                android:paddingLeft="5dp"/>
 
     </LinearLayout>
 
