--- a/app/src/main/res/layout/activity_souvenir.xml
+++ b/app/src/main/res/layout/activity_souvenir.xml
@@ -89,7 +89,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:textColor="#000"
-                    android:textSize="@dimen/subtitleSize"
+                    android:textSize="@dimen/textSize"
                     android:paddingLeft="20dp"
                     android:paddingRight="10dp"
                     />
