--- a/app/src/main/res/layout/slide.xml
+++ b/app/src/main/res/layout/slide.xml
@@ -8,6 +8,6 @@
         android:layout_height="fill_parent"
         android:adjustViewBounds="true"
         android:layout_gravity="center"
-        android:src="@drawable/img1"
+        android:src="@drawable/ic_launcher_foreground"
         android:scaleType="centerCrop"/>
 </FrameLayout>
