--- a/app/src/main/res/layout/attraction_in_home.xml
+++ b/app/src/main/res/layout/attraction_in_home.xml
@@ -6,7 +6,7 @@
     android:padding="3dp">
 
         <LinearLayout
-            android:layout_width="140dp"
+            android:layout_width="150dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:background="@drawable/border"
@@ -16,7 +16,7 @@
                 android:id="@+id/image"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="3"
+                android:layout_weight="2.8"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_launcher_foreground" />
 
@@ -41,7 +41,8 @@
                 android:textColor="#000"
                 android:textSize="@dimen/textSize"
                 android:paddingRight="5dp"
-                android:paddingLeft="5dp"/>
+                android:paddingLeft="5dp"
+                />
 
     </LinearLayout>
 
