--- a/app/src/main/res/layout/attraction_list_view.xml
+++ b/app/src/main/res/layout/attraction_list_view.xml
@@ -14,11 +14,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_gravity="right"
         android:layout_margin="10dp"
-        android:gravity="right"
+        android:gravity="right|center"
         android:background="#fff"
-        tools:ignore="MissingConstraints">
+        tools:ignore="MissingConstraints,RtlHardcoded">
 
         <TextView
             android:id="@+id/title"
@@ -38,12 +37,12 @@
 
     </LinearLayout>
 
-    <com.example.gardeshgari.HorizontalListView
+    <com.example.gardeshgari.adapter.HorizontalListView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:widget="http://schemas.android.com/apk/res-auto"
         android:id="@+id/HorizontalListView"
         android:layout_width="match_parent"
-        android:layout_height="220dp"
+        android:layout_height="250dp"
         android:divider="#000"
         widget:dividerWidth="0dp"
         tools:ignore="MissingConstraints" />
