--- a/app/src/main/res/layout/province.xml
+++ b/app/src/main/res/layout/province.xml
@@ -9,15 +9,15 @@
     android:orientation="horizontal"
     android:layout_gravity="right"
     android:layout_margin="10dp"
-    android:gravity="right"
+    android:gravity="right|center"
     android:background="#fff"
     tools:ignore="MissingConstraints"
     android:padding="10dp">
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:textColor="#000"
         android:textSize="@dimen/titleSize"
