--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -9,6 +9,12 @@
         android:icon="@drawable/team_icon"
         app:showAsAction="always" />
     <item
+        android:id="@+id/search"
+        android:orderInCategory="100"
+        android:title="@string/search"
+        android:icon="@drawable/search_icon"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/province"
         android:orderInCategory="100"
         android:title="@string/province"
