اضافه شدن requestPermissions

--- a/app/src/main/res/layout/activity_attraction.xml
+++ b/app/src/main/res/layout/activity_attraction.xml
@@ -6,22 +6,12 @@
     android:orientation="vertical"
     android:id="@+id/mainListView">
 
-    <!--<LinearLayout-->
-        <!--android:id="@+id/container_toolbar"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="vertical">-->
-
-        <!--<include-->
-            <!--android:id="@+id/toolbar"-->
-            <!--layout="@layout/toolbar" />-->
-    <!--</LinearLayout>-->
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="5dp">
+        android:padding="5dp"
+        tools:ignore="UselessParent">
 
 
         <RelativeLayout
@@ -59,16 +49,18 @@
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/share"
+                android:src="@drawable/share_icon"
                 android:id="@+id/share"
-                android:padding="10dp"/>
+                android:padding="10dp"
+                tools:ignore="ContentDescription" />
 
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/unsaved"
+                android:src="@drawable/unsaved_icon"
                 android:id="@+id/save"
-                android:padding="5dp"/>
+                android:padding="5dp"
+                tools:ignore="ContentDescription" />
 
             <TextView
                 android:id="@+id/name"
@@ -85,7 +77,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="right"
-            tools:ignore="RtlHardcoded"
+            tools:ignore="RtlHardcoded,UseCompoundDrawables"
             android:padding="5dp">
 
             <TextView
@@ -103,7 +95,7 @@
                 android:id="@+id/locationIcon"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:src="@drawable/address"
+                android:src="@drawable/address_icon"
                 tools:ignore="ContentDescription" />
 
         </LinearLayout>
@@ -136,7 +128,7 @@
                 android:id="@+id/descriptionIcon"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:src="@drawable/description"
+                android:src="@drawable/description_icon"
                 tools:ignore="ContentDescription" />
 
         </LinearLayout>
