--- a/app/src/main/res/layout/fragment_attraction.xml
+++ b/app/src/main/res/layout/fragment_attraction.xml
@@ -10,7 +10,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:paddingRight="10dp"
-        android:paddingLeft="10dp">
+        android:paddingLeft="10dp"
+        tools:ignore="UselessParent">
 
         <ListView
             android:layout_width="match_parent"
