--- a/app/src/main/res/layout/attraction_in_home.xml
+++ b/app/src/main/res/layout/attraction_in_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -10,7 +11,8 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:background="@drawable/border"
-            android:padding="3dp">
+            android:padding="3dp"
+            tools:ignore="UselessParent">
 
             <ImageView
                 android:id="@+id/image"
@@ -18,7 +20,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="2.8"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_launcher_foreground" />
+                android:src="@drawable/ic_launcher_foreground"
+                tools:ignore="ContentDescription" />
 
             <TableRow
                 android:id="@+id/hr"
