--- a/app/src/main/res/layout/fragment_souvenir.xml
+++ b/app/src/main/res/layout/fragment_souvenir.xml
@@ -1,4 +1,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -7,7 +8,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:paddingRight="10dp"
-        android:paddingLeft="10dp">
+        android:paddingLeft="10dp"
+        tools:ignore="UselessParent">
 
         <ListView
             android:layout_width="match_parent"
