--- a/app/src/main/res/layout/province.xml
+++ b/app/src/main/res/layout/province.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
@@ -11,7 +10,7 @@
     android:layout_margin="10dp"
     android:gravity="right|center"
     android:background="#fff"
-    tools:ignore="MissingConstraints"
+    tools:ignore="MissingConstraints,RtlHardcoded"
     android:padding="10dp">
 
     <TextView
@@ -22,7 +21,7 @@
         android:textColor="#000"
         android:textSize="@dimen/titleSize"
         android:paddingRight="15dp"
-        />
+        tools:ignore="RtlSymmetry" />
 
     <ImageView
         android:id="@+id/image"
