--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,6 +21,7 @@
     <ScrollView
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:scrollbars="none"
     tools:ignore="MissingConstraints">
 
     <LinearLayout
